--- a/style/style.css
+++ b/style/style.css
@@ -16,7 +16,6 @@
   height: 40px;
 }
 #talk {
-  display: none;
   width: 630px;
   height: 120px;
   z-index: 10;
@@ -77,11 +76,11 @@
 .novel-person {
   width: 200px;
   height: 300px;
-  z-index: 22;
   position: absolute;
-  top: 100px;
-  left: 40px;
+  top: 0px;
+  left: 0px;
   background-repeat: no-repeat;
+  background-color: blue;
   background-position: 0px 0px;
 }
 
@@ -94,7 +93,7 @@
   height: 100px;
   position: absolute;
   z-index: 25;
-  top: 200px;
+  top: 300px;
   background-color: white;
   padding: 10px 20px;
   text-align: center;
