--- a/style/style.css
+++ b/style/style.css
@@ -88,3 +88,13 @@
   font-size: 16pt;
   font-family: helvetica;
 }
+
+.cabin-session {
+  position: absolute;
+  z-index: 20;
+  width: 640px;
+  height: 320px;
+  top: 100px;
+  background-color: #000;
+  color: #fff;
+}
