--- a/style/style.css
+++ b/style/style.css
@@ -93,8 +93,53 @@
   position: absolute;
   z-index: 20;
   width: 640px;
-  height: 320px;
-  top: 100px;
+  height: 420px;
+  top: 10px;
+  left: 10px;
   background-color: #000;
   color: #fff;
+}
+
+.cabin-shell {
+  position: absolute;
+  z-index: 21;
+  width: 300px;
+  height: 150px;
+  top: 270px;
+  left: 20px;
+  border: 1px solid #fff;
+  border-radius: 5px;
+  color: #0f0;
+}
+
+.cabin-help {
+  position: absolute;
+  z-index: 21;
+  width: 300px;
+  height: 150px;
+  top: 270px;
+  left: 330px;
+  border: 1px solid #fff;
+  background-color: #c0c0c0;
+  color: #333;
+}
+
+.cabin-comm {
+  position: absolute;
+  z-index: 21;
+  width: 100px;
+  height: 200px;
+  top: 50px;
+  left: 530px;
+  background-color: #52DA3B;
+}
+
+.cabin-arena {
+  position: absolute;
+  z-index: 21;
+  width: 500px;
+  height: 200px;
+  top: 50px;
+  left: 20px;
+  background-color: #3B46DA;
 }
