--- a/style/style.css
+++ b/style/style.css
@@ -97,19 +97,58 @@
   top: 10px;
   left: 10px;
   background-color: #000;
-  color: #fff;
+}
+
+.cabin-shell,
+.cabin-shell-history,
+.cabin-shell-input {
+  position: absolute;
+}
+
+.cabin-shell,
+.cabin-shell-history,
+.cabin-shell li,
+.cabin-shell-input {
+  background-color: #000;
+  margin: 0px;
+  padding: 0px;
+  color: #0f0;
+  font-family: monospace;
+  font-size: 10pt;
 }
 
 .cabin-shell {
-  position: absolute;
   z-index: 21;
   width: 300px;
   height: 150px;
   top: 270px;
   left: 20px;
-  border: 1px solid #fff;
+  border: solid #fff 1px;
   border-radius: 5px;
-  color: #0f0;
+}
+
+.cabin-shell-history,
+.cabin-shell-input {
+  z-index: 22;
+  width: 296px;
+  left: 23px;
+}
+
+.cabin-shell-history {
+  height: 130px;
+  top: 273px;
+  overflow: auto;
+}
+
+.cabin-shell-history li {
+  color: #2b2;
+  list-style-type: none;
+}
+
+.cabin-shell-input {
+  height: 19px;
+  top: 400px;
+  border: 0px;
 }
 
 .cabin-help {
