--- a/style/style.css
+++ b/style/style.css
@@ -1,7 +1,7 @@
 #area {
   overflow: hidden;
-  width: 640px;
-  height: 420px;
+  width: 800px; /* era 640 */
+  height: 600px; /* era 420 */
   border: 1px solid red;
 }
 #scenario {
@@ -57,9 +57,9 @@
 .novel-scene {
   position: absolute;
   z-index: 20;
-  width: 640px;
-  height: 320px;
-  top: 100px;
+  width: 800px;
+  height: 400px;
+  top: 200px;
 }
 
 .novel-person {
@@ -77,11 +77,11 @@
 }
 
 .novel-message {
-  width: 600px;
+  width: 760px;
   height: 100px;
   position: absolute;
   z-index: 25;
-  top: 300px;
+  top: 460px;
   background-color: #eff;
   padding: 10px 20px;
   text-align: center;
@@ -92,8 +92,8 @@
 .cabin-session {
   position: absolute;
   z-index: 20;
-  width: 640px;
-  height: 420px;
+  width: 800px;
+  height: 600px;
   top: 10px;
   left: 10px;
   background-color: #000;
@@ -119,8 +119,8 @@
 
 .cabin-shell {
   z-index: 21;
-  width: 300px;
-  height: 150px;
+  width: 400px;
+  height: 300px;
   top: 270px;
   left: 20px;
   border: solid #fff 1px;
@@ -130,7 +130,7 @@
 .cabin-shell-history,
 .cabin-shell-input {
   z-index: 22;
-  width: 296px;
+  width: 456px;
   left: 23px;
 }
 
@@ -177,9 +177,28 @@
 .cabin-arena {
   position: absolute;
   z-index: 21;
-  width: 500px;
-  height: 200px;
+  width: 300px;
+  height: 350px;
   top: 50px;
   left: 20px;
   background-color: #3B46DA;
+}
+
+#blocklyDiv {
+  position: absolute;
+  z-index: 30;
+  height: 520px;
+  width: 770px;
+  top: 20px;
+  left: 20px;
+}
+
+#console-display {
+  position: absolute;
+  z-index: 31;
+  background-color: black;
+  width: 200px;
+  height: 150px;
+  top: 350px;
+  left: 550px;
 }
