--- a/style/style.css
+++ b/style/style.css
@@ -183,13 +183,20 @@
   background-color: #3B46DA;
 }
 
-#blocklyDiv {
+#editor_area {
   position: absolute;
   z-index: 30;
-  height: 520px;
-  width: 770px;
-  top: 20px;
-  left: 20px;
+  height: 600px;
+  width: 800px;
+  top: 8px;
+  left: 8px;
+  background-color: #f00;
+}
+
+#blocklyDiv {
+  display: block;
+    width: 800px;
+    height: 600px;
 }
 
 #console-display {
