--- a/style/style.css
+++ b/style/style.css
@@ -211,3 +211,13 @@
   top: 350px;
   left: 550px;
 }
+
+.code-panel {
+  position: absolute;
+  z-index: 32;
+  background-color: gray;
+  width: 200px;
+  height: 50px;
+  top: 10px;
+  left: 590px;
+}
